--- a/Practitioners/style.css
+++ b/Practitioners/style.css
@@ -963,6 +963,26 @@ html{
     max-width: 100%;
     flex-wrap: wrap;
     display: flex;
+    flex-direction: row !important;
+    align-items: center;
+    text-align: center;
+    gap: 20px;
+
+  }
+  .logo-text {
+    font-family: Inter, sans-serif;
+    flex-grow: 1;
+    flex-basis: auto;
+    margin: auto 0 !important;
+  }
+  
+}
+
+@media (max-width: 991px) {
+  .logo-containerr {
+    max-width: 100%;
+    flex-wrap: wrap;
+    display: flex;
     flex-direction: column !important;
     align-items: center;
     text-align: center;
@@ -977,6 +997,7 @@ html{
   }
   
 }
+
 
 .logo-wrapper {
   display: flex;
